# paraseq

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
data/: interleaved.fastq  multiline.fasta  out.bq  paired.bam  paired.cram  paired.sam  r1.fastq  r123.fastq  r2.fastq  r3.fastq  r4.fastq  sample.bam  sample.cram  sample.fasta  sample.fasta.zst  sample.fastq  sample.fastq.zst  sample.sam
examples/: collection.rs  fastx.rs  gcs.rs  htslib.rs  interleaved.rs  many_readers.rs  multi_interleaved.rs  multi_parallel.rs  multiline_fasta.rs  naive.rs  paired_parallel.rs  parallel.rs  parallel_closure.rs  print_quad_parallel.rs  quad_parallel.rs  read_write.rs  reloading.rs  reloading_parallel.rs  ssh.rs  triplet_parallel.rs  triplet_parallel_interleaved.rs  url.rs
src/: error.rs  fasta.rs  fastq.rs  fastx.rs  gcs.rs  htslib.rs  lib.rs  main.rs  prelude.rs  record.rs  ssh.rs  validation.rs
src/parallel/: error.rs  fastx.rs  mod.rs  multi.rs  paired.rs  processor.rs  reader.rs  single.rs
src/parallel/macros/: interleaved.rs  interleaved_multi.rs  mod.rs  multi.rs  paired.rs  single.rs
