[package]
name = "paraseq"
version = "0.1.1"
edition = "2021"
authors = ["Noam Teyssier"]
keywords = ["fasta", "fastq", "parser", "parallel", "paired"]
license = "MIT"
repository = "https://github.com/noamteyssier/paraseq"
description = "A minimal-copy parser for FASTA and FASTQ files built for paired parallel processing."
readme = "README.md"
documentation = "https://docs.rs/paraseq"

[dependencies]
anyhow = { version = "1.0.95", optional = true }
buffer-redux = "1.0.2"
crossbeam-channel = "0.5.14"
memchr = "2.7.4"
parking_lot = "0.12.3"
thiserror = "2.0.11"

[profile.release]
debug = true

[features]
default = ["anyhow"]
anyhow = ["dep:anyhow"]

[dev-dependencies]
niffler = "2.7.0"
