[package]
name = "paraseq"
version = "0.4.0"
edition = "2021"
authors = ["Noam Teyssier"]
keywords = ["fasta", "fastq", "parser", "parallel", "paired"]
license = "MIT"
repository = "https://github.com/noamteyssier/paraseq"
description = "A minimal-copy parser for FASTA and FASTQ files built for paired parallel processing."
readme = "README.md"
documentation = "https://docs.rs/paraseq"

[dependencies]
anyhow = { version = "1.0.95", optional = true }
crossbeam-channel = "0.5.14"
either = "1.15.0"
itertools = "0.14.0"
memchr = "2.7.4"
niffler = { version = "3.0.0", optional = true }
parking_lot = "0.12.3"
reqwest = { version = "0.12.22", optional = true, features = ["blocking"] }
rust-htslib = { version = "0.49.0", default-features = false, optional = true }
smallvec = "1.15.1"
thiserror = "2.0.11"
which = { version = "8.0.0", optional = true }

[features]
default = ["anyhow", "niffler"]
anyhow = ["dep:anyhow"]
niffler = ["dep:niffler"]
htslib = ["dep:rust-htslib"]
url = ["dep:reqwest", "dep:niffler"]
ssh = ["dep:which"]
gcs = ["dep:which"]

[dev-dependencies]
clap = { version = "4.5.40", features = ["derive"] }
niffler = "3.0.0"
paraseq = { path = ".", features = ["url", "htslib", "ssh", "gcs"] }
